--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "clsx": "2.1.1",
     "lucide-react": "0.544.0",
     "tailwind-merge": "3.3.1",
-    "tailwindcss-animate": "1.0.7"
+    "tailwindcss-animate": "1.0.7",
+    "ethers": "^6.13.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
