--- a/package.json
+++ b/package.json
@@ -10,24 +10,26 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "class-variance-authority": "0.7.1",
+    "clsx": "2.1.1",
+    "ethers": "^6.13.4",
+    "lucide-react": "0.544.0",
+    "next": "15.5.3",
+    "path": "0.12.7",
     "primeicons": "^7.0.0",
     "primereact": "^10.9.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router": "^7.8.2",
     "react-router-dom": "^7.8.2",
-    "tailwindcss": "^3.4.17",
-    "path": "0.12.7",
-    "next": "15.5.3",
-    "class-variance-authority": "0.7.1",
-    "clsx": "2.1.1",
-    "lucide-react": "0.544.0",
     "tailwind-merge": "3.3.1",
+    "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "1.0.7",
-    "ethers": "^6.13.4"
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@types/node": "24.3.1",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react-swc": "^4.0.0",
@@ -39,7 +41,6 @@
     "postcss": "^8.5.6",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
-    "vite": "^7.1.2",
-    "@types/node": "24.3.1"
+    "vite": "^7.1.2"
   }
 }
