--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@helia/http": "^2.2.1",
+    "@helia/unixfs": "^5.1.0",
+    "buffer": "^6.0.3",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "ethers": "^6.13.4",
+    "helia": "^5.5.1",
     "lucide-react": "0.544.0",
     "next": "15.5.3",
     "path": "0.12.7",
